<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnswerActivity"
    android:orientation="vertical"
    android:gravity="center">


    <TextView
        android:id="@+id/answerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_label"
        style="@style/title"/>

    <TextView
        android:id="@+id/correctAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/description" />

    <TextView
        android:id="@+id/yourAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/description" />

    <TextView
        android:id="@+id/correctTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/description"/>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/btn_next" />

    <Button
        android:id="@+id/btnFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/btn_finish" />
</LinearLayout>